--- a/src/app/show-error/show-error.component.html
+++ b/src/app/show-error/show-error.component.html
@@ -12,7 +12,7 @@
         {{ control.errors.greaterThan }}
     </div>
     <div *ngIf="control.errors.email" class="label label--danger">
-        {{ control.errors.email }}
+        Invalid Email
     </div>
     <div *ngIf="control.errors.mobile" class="label label--danger">
         {{ control.errors.mobile }}
