--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,17 @@
 @import "primeng/resources/themes/aura-dark-green/theme.css";
 @import "primeng/resources/primeng.css";
 
+@layer tailwind-base, primeng, tailwind-utilities;
+        
+@layer tailwind-base {
+    @tailwind base;
+}
+
+@layer tailwind-utilities {
+    @tailwind components;
+    @tailwind utilities;
+}
+
 html {
     font-size: 14px;
 }
