--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<app-education-form></app-education-form>
-<app-profile-form></app-profile-form>
+<div class="flexContainer">
+    <div>
+        <app-education-form></app-education-form>
+    </div>
+    <div>
+        <app-profile-form></app-profile-form>
+    </div>
+</div>
+
 <router-outlet />
