--- a/src/app/education/education-form/education-form.component.html
+++ b/src/app/education/education-form/education-form.component.html
@@ -11,9 +11,9 @@
             <app-show-error [control]="getControl('postgraducationMarks')"></app-show-error>
         </div>
 
-        <div class="flex flex-row">
+        <!-- <div class="flex flex-row">
             <p-button label="Submit" type="Submit" />
             <p-button label="cancel" *ngIf="showCancelButton" severity="secondary" (onClick)="restoreForm()" />
-        </div>
+        </div> -->
     </form>
 </p-card>
