--- a/src/app/profile/profile-form/profile-form.component.html
+++ b/src/app/profile/profile-form/profile-form.component.html
@@ -47,7 +47,7 @@
             <app-show-error [control]="getControl('gender')"></app-show-error>
         </div>
 
-        <div class="flex flex-row">
+        <!-- <div class="flex flex-row">
             <p-button label="Submit" type="Submit" />
             <p-button 
                 label="cancel" 
@@ -55,7 +55,7 @@
                 severity="secondary"
                 (onClick)="restoreForm()" 
             />
-        </div>
+        </div> -->
     </form>
 </p-card>
 
