--- a/src/app/bottom-nativation/bottom-nativation.component.html
+++ b/src/app/bottom-nativation/bottom-nativation.component.html
@@ -1,4 +1,4 @@
 <div class="container">
     <p-button label="Cancel" (onClick)="onClickCancel.emit()" severity="secondary" class="container--button" />
-    <p-button label="Apply" severity="success" class="container--button" (onClick)="onClickCancel.emit()" />
+    <p-button label="Apply" severity="success" class="container--button" (onClick)="onClickApply.emit()" />
 </div>
