--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<p-toast />
 <div class="flexContainer">
     <div>
         <app-education-form
@@ -14,6 +15,7 @@
 <app-bottom-nativation 
     *ngIf="isAnyFormDirty"
     (onClickCancel)="restoreForm()"
+    (onClickApply)="handleSubmit()"
     >
 </app-bottom-nativation>
 <router-outlet />
