--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,8 +4,7 @@
     justify-content: flex-start;
     width: 100%;
     align-items: flex-start;
-    // & > div {
-    //     width: 100%;
-    //     height: 100%;
-    // }
+    & > div {
+        margin-right: 20px;
+    }
 }
