--- a/src/app/education/education-form/education-form.component.html
+++ b/src/app/education/education-form/education-form.component.html
@@ -1,5 +1,5 @@
 <p-card header="Profile info" class="container">
-    <form [formGroup]="educationForm" (ngSubmit)="submitForm()" novalidate class="formContainer">
+    <form [formGroup]="educationForm" novalidate class="formContainer">
         <div class="formItem">
             <label for="username">Graduation marks</label>
             <input pInputText id="graduactionMarks" aria-describedby="username-help" formControlName="graduactionMarks" />
@@ -10,10 +10,5 @@
             <input pInputText id="email" aria-describedby="please enter email" formControlName="postgraducationMarks" />
             <app-show-error [control]="getControl('postgraducationMarks')"></app-show-error>
         </div>
-
-        <!-- <div class="flex flex-row">
-            <p-button label="Submit" type="Submit" />
-            <p-button label="cancel" *ngIf="showCancelButton" severity="secondary" (onClick)="restoreForm()" />
-        </div> -->
     </form>
 </p-card>
